# tmdb-scraper

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yaml
src/harvester/: error.rs  exporter.rs  harvester.rs  main.rs  queue.rs  syncer.rs
src/shared/: constants.rs  functions.rs  lib.rs  types.rs
