[package]
name = "scraper"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "harvester"
path = "src/harvester/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"


[dependencies]
aws-sdk-sqs = "1.65.0"
lambda_runtime = "0.13.0"
reqwest = { version = "0.12.15", features = ["native-tls-vendored", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
