[package]
name = "scraper"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "harvester"
path = "src/harvester/main.rs"

[[bin]]
name = "collector"
path = "src/collector/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"


[dependencies]
async-compression = { version = "0.4.23", features = ["gzip", "futures-io"] }
aws-config = "1.6.2"
aws-sdk-sqs = "1.65.0"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
flate2 = "1.1.1"
futures = "0.3.31"
lambda_runtime = "0.13.0"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
static_init = "1.0.3"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
